@@ -1,3 +1,14 @@
+2011-05-12  Young Han Lee  <joybro@company100.net>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Implement layoutTestController.layerTreeAsText()
+        https://bugs.webkit.org/show_bug.cgi?id=60367
+
+        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
+        (LayoutTestController::layerTreeAsText):
+        * DumpRenderTree/qt/LayoutTestControllerQt.h:
+
 2011-05-11  Eric Seidel  <eric@webkit.org>
 
         Reviewed by David Levin.
